<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:orientation="vertical">

    <include layout="@layout/title"/>

    <!--<RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/header_height"
        android:background="@color/theme_positive_color">

        <Button
            android:id="@+id/img_header_menu_left"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:background="@color/theme_positive_color"
            android:text="@string/device_list_menu_left"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/txt_header_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignWithParentIfMissing="false"
            android:layout_centerHorizontal="true"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:gravity="center_vertical"
            android:singleLine="true"
            android:text="@string/device_list_header"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <CheckBox
            android:id="@+id/cb_scan_mode"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_toLeftOf="@id/img_header_menu_right"
            android:background="@drawable/btn_cb"
            android:button="@null"
            android:padding="10dp"
            android:text="MeshScan"
            android:textColor="@color/white"
            android:textSize="11sp"
            android:visibility="visible" />


        <ImageView
            android:id="@+id/img_header_menu_right"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:contentDescription="@null"
            android:padding="10dp"
            android:src="@drawable/icon_top_tab_add" />
    </RelativeLayout>-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:visibility="gone">

            <EditText
                android:id="@+id/sendInterval"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Interval" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:visibility="gone">

            <EditText
                android:id="@+id/sendNumbers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Numbers" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:visibility="gone">

            <TextView
                android:id="@+id/notifyCount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Notify Count" />
        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layoutMode="clipBounds"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_on"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/device_list_all_on" />

        <Button
            android:id="@+id/btn_off"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/device_list_all_off" />

        <Button
            android:id="@+id/btn_ota"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/device_list_btn_mesh_ota" />

        <Button
            android:id="@+id/log"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="LOG" />

    </LinearLayout>


    <!--interval test-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="adr： 0x" />

        <EditText
            android:id="@+id/et_adr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:digits="0123456789abcdefABCDEF"
            android:maxLines="1"
            android:minWidth="50dp"
            android:text="FFFF" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:text="interval: " />


        <EditText
            android:id="@+id/et_interval"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:digits="0123456789"
            android:minWidth="50dp"
            android:text="500" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="ms" />

        <Button
            android:id="@+id/btn_start_test"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:text="start" />

        <TextView
            android:id="@+id/tv_test_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/border_line"
        android:visibility="gone" />

    <GridView
        android:id="@+id/list_devices"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fadingEdge="none"
        android:listSelector="@android:color/transparent"
        android:numColumns="3"
        android:scrollbars="none"
        android:verticalSpacing="10dp" />

    <Button
        android:id="@+id/btn_scan_test"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:visibility="gone"
        android:text="ScanTest" />


    <Button
        android:id="@+id/userAll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:text="OnOffTest"
        android:visibility="gone" />
    <!--OnlineStatus-->

    <Button
        android:id="@+id/online_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="online status test"
        android:visibility="gone" />
</LinearLayout>